--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,4 +2,10 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
-  hello: "Hello world"
+  posts:
+    index:
+      author: "Posted %{ago} ago by %{author}"
+      comment: Comment
+      comments:
+        one: "1 Comment"
+        other: "%{count} Comments"
