Added basic security for posts Added commenting (need to check for not-logged in commenters)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,9 +3,10 @@
 
 en:
   posts:
-    index:
+    post:
       author: "Posted %{ago} ago by %{author}"
       comment: Comment
       comments:
         one: "1 Comment"
         other: "%{count} Comments"
+      body: Your Comment
