removed post and comment partials as they have very different display logic depending on where they are rendered

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,10 +3,20 @@
 
 en:
   posts:
-    post:
+    index:
       author: "Posted %{ago} ago by %{author}"
       comment: Comment
       comments:
         one: "1 Comment"
         other: "%{count} Comments"
       body: Your Comment
+    show:
+      author: "Posted %{ago} ago by %{author}"
+      comment: Add a Comment
+      comments:
+        one: "1 Comment"
+        other: "%{count} Comments"
+      body: Your Comment
+  shared:
+    comment:
+      author: "Posted %{ago} ago by %{author}"
