Added admin field to user for access to the admin area and moved posting into the admin area

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,3 +20,7 @@ en:
   shared:
     comment:
       author: "Posted %{ago} ago by %{author}"
+    post:
+      comments:
+        one: "1 Comment"
+        other: "%{count} Comments"
