--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,10 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
+  application:
+    dashboard: Dashboard
+    sign_out: 'Sign Out'
+    sign_in: 'Sign In'
   posts:
     index:
       author: "Posted %{ago} ago by %{author}"
@@ -12,6 +16,7 @@ en:
       body: Your Comment
     show:
       author: "Posted %{ago} ago by %{author}"
+      back: Back to blog
       comment: Add a Comment
       comments:
         one: "1 Comment"
