Routed the blog through alias called blog Did some basic styling on the main blog listing

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,6 +11,7 @@ en:
       blog: Blog
   posts:
     index:
+      page_title: All Entries
       author: "Posted %{ago} ago by %{author}"
       comment: Comment
       comments:
