Some restyling and excluding signup

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,7 +3,7 @@ en:
     admin:
       site: 'Site'
     application:
-      dashboard: Dashboard
+      admin: Admin
       sign_out: 'Sign Out'
       sign_in: 'Sign In'
       home: home
